[gd_scene load_steps=2 format=3 uid="uid://bgr07w3y1i3q"]

[ext_resource type="Script" uid="uid://b7l5cpc8umgxe" path="res://lobby/Lobby.gd" id="1_ntgqb"]

[node name="Lobby" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_ntgqb")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 0
offset_left = 387.0
offset_top = 192.0
offset_right = 797.0
offset_bottom = 730.0

[node name="NameInput" type="LineEdit" parent="VBoxContainer"]
layout_mode = 2
placeholder_text = "Name"

[node name="IPInput" type="LineEdit" parent="VBoxContainer"]
layout_mode = 2
placeholder_text = "IP-Adresse"

[node name="PortInput" type="LineEdit" parent="VBoxContainer"]
layout_mode = 2
placeholder_text = "Port"

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="HostButton" type="Button" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "Host"

[node name="JoinButton" type="Button" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "Join"
